force-app/main/default/objects/AI_Schema_Cache__c/AI_Schema_Cache__c.object-meta.xml
<CustomObject>
    <label>AI Schema Cache</label>
    <pluralLabel>AI Schema Cache</pluralLabel>
    <nameField>
        <label>Cache Key</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Stores pre-computed org schema summaries for the AI Agent. Refreshed by SchemaRefreshJob (daily). Single record with Name = &quot;SCHEMA_SUMMARY&quot;.</description>
</CustomObject>