force-app/main/default/objects/AI_Schema_Cache__c/fields/Last_Refreshed__c.field-meta.xml
<CustomField>
    <fullName>Last_Refreshed__c</fullName>
    <label>Last Refreshed</label>
    <type>DateTime</type>
    <description>Timestamp of when the schema cache was last rebuilt.</description>
</CustomField>