force-app/main/default/objects/AI_Schema_Cache__c/fields/Object_Count__c.field-meta.xml
<CustomField>
    <fullName>Object_Count__c</fullName>
    <label>Object Count</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
    <description>Number of objects included in the cached schema summary.</description>
</CustomField>