force-app/main/default/objects/AI_Schema_Cache__c/fields/Schema_Summary__c.field-meta.xml
<CustomField>
    <fullName>Schema_Summary__c</fullName>
    <label>Schema Summary</label>
    <type>LongTextArea</type>
    <length>131072</length>
    <description>Pre-computed compact schema summary text sent to AI for query planning.</description>
</CustomField>